# bazel-examples

./: .gitignore  README.md
.buildkite/: pipeline.yml
.circleci/: config.yml
01-up-and-running/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  exercise.sh
01-up-and-running/groceries/: BUILD.bazel
02-java-tooling/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  exercise.sh
02-java-tooling/src/main/java/com/example/myproject/: Greeter.java
03-java-dependencies/: .bazelignore  .bazelrc  .editorconfig  .gitignore  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  exercise.sh  maven_install.json
03-java-dependencies/app-one/src/main/java/com/example/myproject/: BUILD.bazel
03-java-dependencies/app-one/src/test/java/com/example/myproject/: BUILD.bazel
03-java-dependencies/src/main/java/com/oasisdigital/example1/: Greeter.java
03-java-dependencies/src/test/java/com/oasisdigital/example1/: TestHello.java
03-java-dependencies/time-server/: BUILD.bazel
04-multi-language/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  exercise.sh  maven_install.json
04-multi-language/rules/: acme_corporate_standards.bzl
04-multi-language/service/src/main/java/com/oasisdigital/grocery/: BUILD.bazel
05-cpp/: .bazelignore  .bazelrc  .clang-format  .gitignore  README.md  WORKSPACE  WORKSPACE.bazel  exercise.sh  sqlite.BUILD
05-cpp/speller/announce/: BUILD.bazel  announce.cc  announce.h
05-cpp/speller/data_driven_tests/: BUILD.bazel  lookup-datatest.cc
05-cpp/speller/greeting/: BUILD.bazel  greeting-test.cc  greeting.cc  greeting.h
05-cpp/speller/lookup/: BUILD.bazel  lookup-test.cc  lookup.cc  lookup.h
05-cpp/speller/main/: BUILD.bazel  build-dictionary.cc  spell.cc
06-python/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  exercise.sh  gazelle.sh
06-python/app/: BUILD.bazel  __main__.py  gazelle_python.yaml  main.py  requirements.txt  requirements_lock.txt
06-python/app/superhero/: BUILD.bazel  superhero.py
07-full-stack/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  exercise.sh  package.json  tsconfig.json
07-full-stack/client/: BUILD.bazel
07-full-stack/client/src/: BUILD.bazel  tsconfig.json
07-full-stack/client/src/app/: pair-history-view.component.ts  pair-list-view.component.ts  pair-list.component.ts
07-full-stack/client/src/example/: index.html  index.prod.html
07-full-stack/fx-server/: BUILD.bazel  tsconfig.json
08-sprawling-suite/: .bazelrc  .bazelversion  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  exercise.sh  go.mod  go.sum  maven_install.json  package.json  service_list.bzl
08-sprawling-suite/apidef/: BUILD.bazel  api.proto
08-sprawling-suite/frontend/: BUILD.bazel  datafile.txt
08-sprawling-suite/generator/: popular.txt
08-sprawling-suite/people/: BUILD.bazel  people.cc  service.h
08-sprawling-suite/speller000/: BUILD.bazel
08-sprawling-suite/speller000/src/main/java/com/oasisdigital/spelling/: SpellingServer.java
08-sprawling-suite/speller001/: BUILD.bazel
08-sprawling-suite/speller001/src/main/java/com/oasisdigital/spelling/: SpellingServer.java
08-sprawling-suite/speller002/: BUILD.bazel
08-sprawling-suite/speller002/src/main/java/com/oasisdigital/spelling/: SpellingServer.java
08-sprawling-suite/speller003/: BUILD.bazel
08-sprawling-suite/speller005/: BUILD.bazel
08-sprawling-suite/speller005/src/main/java/com/oasisdigital/spelling/: SpellingServer.java
08-sprawling-suite/speller007/: BUILD.bazel
08-sprawling-suite/speller008/: BUILD.bazel
08-sprawling-suite/speller009/: BUILD.bazel
08-sprawling-suite/trivial-speller/src/main/java/com/oasisdigital/spelling/: BUILD.bazel  SpellingServer.java
09-large-angular/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  WORKSPACE.bazel  angular.json  package.json
09-large-angular/src/: initialize_testbed.ts  styles.scss
09-large-angular/src/app/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.spec.ts
09-large-angular/stress-test/: stress.ts  template-app-module-build.ts  template-module-bazel.ts
11-cross/cc65/: BUILD.bazel  cc65.bzl
2-java-tooling/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE
4-multi-language/: .bazelignore  BUILD.bazel  WORKSPACE  maven_install.json
4-multi-language/apidef/: BUILD.bazel
4-multi-language/rules/: acme_corporate_standards.bzl
5-full-stack/: .bazelignore  .bazelrc  BUILD.bazel  WORKSPACE  exercise.sh  maven_install.json  package.json
5-full-stack/client/: BUILD.bazel
5-full-stack/client/src/: BUILD.bazel  main.dev.ts  rollup.config.js
5-full-stack/client/src/app/: BUILD.bazel  app.module.ts  pair-history-chart.component.ts  pair-history.component.ts
5-full-stack/fx-server/: BUILD.bazel
5-full-stack/time-server/: BUILD.bazel
5-full-stack/tools/: angular_ts_project.bzl  typescript.bzl
6-sprawling-suite/: .bazelrc  BUILD.bazel  WORKSPACE  bazel-6-sprawling-suite  bazel-bin  bazel-out  bazel-testlogs  exercise.sh  maven_install.json  package.json
6-sprawling-suite/apidef/: BUILD.bazel
6-sprawling-suite/frontend/: frontend.go
6-sprawling-suite/generator/: generate.ts
6-sprawling-suite/people/: BUILD.bazel  server.cc  service.cc
6-sprawling-suite/speller000/: BUILD.bazel
6-sprawling-suite/speller001/: BUILD.bazel
6-sprawling-suite/speller002/: BUILD.bazel
6-sprawling-suite/speller003/: BUILD.bazel
6-sprawling-suite/speller004/: BUILD.bazel
6-sprawling-suite/speller005/: BUILD.bazel
6-sprawling-suite/speller006/: BUILD.bazel
6-sprawling-suite/speller007/: BUILD.bazel
6-sprawling-suite/speller008/: BUILD.bazel
6-sprawling-suite/speller009/: BUILD.bazel
7-large-angular/: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  exercise.sh  package.json
7-large-angular/src/: BUILD.bazel  tsconfig.json
7-large-angular/src/app/: app-routing.module.ts
7-large-angular/src/app/hello-world/: hello-world.component.ts
7-large-angular/src/shared/material/: material.module.ts
7-large-angular/stress-test/: generate.ts  template-app-module-build.ts
(+30 files in other folders)
